--- a/TestMagnis/TestMagnis.csproj
+++ b/TestMagnis/TestMagnis.csproj
@@ -55,7 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataModel\AccountMeneger.cs" />
-    <Compile Include="DataModel\Accounts.cs" />
+    <Compile Include="DataModel\Account.cs" />
     <Compile Include="DataModel\ChatContext.cs" />
     <Compile Include="DataModel\Message.cs" />
     <Compile Include="DataModel\MessageManager.cs" />
